style.css
/* ... */
/* Extra Small Devices, Phones */
@media (max-width : 638px) {

    .hello_btn {
        font-size: 15px;
        width: 50%;
    }

    #skills {
        display: block;
        margin-bottom: 100px;
        padding-left: 0%;
    }

    .about_left {
        margin: 0 0 0 0;
    }

    .about_img {
        padding: 15% 0 5% 25%;
        margin: 0 0 0 0;
    }

    .contact_left {
        height: auto;
        margin-bottom: 10%;
        padding: 0 0 0 0;
    }

    .contact_img {
        padding: 0 0 0 30%;
    }

    .project_title {
        font-size: 17px;
    }

    .div-thanks-img {
        width: 70%;
        margin-left: 30%;
        margin-top: 25%;
    }

    .thanks-image {
        width: 100%;
    }

    .thanks_btn {
        width: 25%;
    }

}

@media (max-width : 532px) {
    .hello_job {
        font-size: 15px
    }

    .about_img {
        display: none;
    }

    #toTopBtn {
        bottom: 10px;
        z-index: 99;
    }

    .social-icons {
        float: left;
        width: 100%;
        margin-top: 2%;
    }

    .twitter {
        margin-left: 0;
        ;
    }

    .icon {
        width: 12%;
    }

    #projects {
        margin: 0 5%;
    }

    .projects_header {
        text-align: left;
    }

    .project_1,
    .project_2,
    .project_3,
    .project_4,
    .project_5,
    .project_6,
    .project_7 {
        width: 100%;
        height: auto;
        margin: 0;
        margin-bottom: 15%;
        padding: 0;
        justify-content: flex-start;
    }

    .projects_center {
        justify-content: flex-start;
    }

    .pr_description {
        width: 90%;
    }

    .project_para {
        width: 90%;
    }

    .agree-text {
        font-size: 5px;
        padding-left: 15%;
    }

    .foot {
        width: 70%
    }
}

@media (max-width: 469px) {
    .hello_left {
        background-image: none;
        padding-bottom: 0;
        z-index: 1;
    }

    .hello_right {
        max-width: 80%;
    }

    .hello_job {
        font-size: 17px;
    }

    .hello_btn {
        width: 70%;
    }

    .about_left {
        display: block;
        width: 90%;
    }

    .about_img {
        display: block;
        content: url(assets/profile-blob.png);
        float: right;
        max-width: 60%;
        padding-top: 0;

    }

    .project_image {
        opacity: 1;
    }

    .contact_right {
        width: 80%;
    }

    .policy {
        display: block;
        max-width: 95%;
        margin: 0 auto;
        margin-bottom: 15%;
    }

    .policy_img {
        width: 70%;
        margin-left: 15%;
    }

    #privacy-policy {
        margin-top: 15%
    }

    .policy-body {
        max-width: 95%;
    }

    #thank-you {
        margin-bottom: 40%;
    }

    .div-thanks-img {
        width: 80%;
        margin-left: 25%;
        margin-top: 25%;
    }

    .thanks-image {
        width: 100%;
    }

    .thanks_btn {
        width: 35%;
    }

}

/* Custom, iPhone Retina */
@media (max-width : 320px) {
    .icon {
        height: 50%;
        width: 25%;
    }

    nav ul {
        margin-right: -10%;
    }

    .hello_btn {
        font-size: 13px;
    }

    .hello_title {
        font-size: 35px;
        ;
    }

    .hello_job {
        font-size: 15px;
    }

    .about_left {
        margin-left: 10%;
    }

    .about_img {
        max-width: 80%;
        padding: 10% 0 0 5%;
    }

    .about_right p {
        font-size: 13px;
    }

    .skills_left {
        max-width: 95%;
        margin-bottom: 15%;
    }

    .project_title {
        font-size: 15px;
    }

    .pr_description {
        font-size: 15px;
    }

    .content {
        max-width: 200%;
    }

    .contact_img {
        display: none;
    }

    .foot {
        font-size: 13px;
    }

    #toTopBtn {
        bottom: 30px;
        z-index: 99;
    }


}

